some testing and changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ project(zetty)
 file(GLOB_RECURSE zetty_SOURCES "src/*.cpp")
 file(GLOB_RECURSE zetty_HEADERS "include/*.hpp")
 
+file(COPY resources DESTINATION .)
+
 include_directories(include)
 add_executable(zetty ${zetty_SOURCES})
 target_link_libraries(zetty z)
